university/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: university-be
  labels:
    app: university-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: university-be
  template:
    metadata:
      name: university-be
      labels:
        app: university-be
    spec:
      containers:
        - name: university-be
          image: university-be:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
