university/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-api-service
spec:
  selector:
    app: university-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
