university/k8s/mongo-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-external
spec:
  selector:
    app: mongodb-external
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongodb-external
subsets:
  - addresses:
      - ip: 172.20.10.2
    ports:
      - port: 27017
